sandbox/output
fizzbuzz.c:8:7: error: no previous prototype for 'fizzBuzz' [-Werror=missing-prototypes]
 char* fizzBuzz(int val)
       ^
cc1: all warnings being treated as errors
fizzbuzz_tests.c:1:19: fatal error: hiker.h: No such file or directory
 #include "hiker.h"
                   ^
compilation terminated.
make: *** [test] Error 1
